# 8085emu

./: .gitignore  CMakeLists.txt  README.md  readme.md
cmake/: debug.cmake  release.cmake
include/: 8085.h  Terminal.h
src/: 8085.cpp  Execute.cpp  Instruction.cpp  Terminal.cpp  Transfer.cpp  main.cpp
